error handlers: network, login, location

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -37,6 +37,6 @@
 
   <div id="pseudo-alert" [class]="className">
       <fa-icon class="fas fa-exclamation-triangle" color="warning"></fa-icon>
-      <p>Error: Please check your login credentials.</p>
+      <p>{{ warningMessage }}</p>
   </div>
 </ion-content>
