set splash page

--- a/src/pages/splash/splash.html
+++ b/src/pages/splash/splash.html
@@ -9,6 +9,6 @@
 
 <ion-content padding>
   <div class="splash-content">
-    <img src="./assets/imgs/logo_herbalife_v2.png">
+    <img src="../../assets/imgs/logo_herbalife_v2.png">
   </div>
 </ion-content>
